<resources>
    <string name="app_name">BloodPort</string>

    <!-- Blood Groups -->
    <string-array name="bloodGroups">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string-array name="cities">
        <item>Lahore</item>
        <item>Karachi</item>
        <item>Islamabad</item>
        <item>Quetta</item>
        <item>Peshawar</item>
        <item>Faisalabad</item>
        <item>Multan</item>
    </string-array>

    <!--Registration Fragment Layout Strings -->
    <string name="registration_fragment_email_address_hint">Email Address</string>
    <string name="registration_fragment_password_hint">Password</string>
    <string name="registration_fragment_name_hint">Your Complete Name</string>
    <string name="registration_fragment_phone_hint">Phone Number</string>
    <string name="registration_fragment_terms_and_conditions">By clicking this checkbox, you agree to all the terms and conditions and  the consent to share your information </string>
    <string name="registration_fragment_register_button">Register</string>
    <string name="registration_fragment_registration">Register</string>
    <string name="registration_fragment_male">Male</string>
    <string name="registration_fragment_female">Female</string>
    <string name="registration_fragment_bloodgroup">BloodGroup</string>
    <string name="registration_fragment_spinner_prompt">Please select your Blood Group</string>

    <!--Confirmation Popup Layout Strings -->
    <string name="confirm_popup_header">Please confirm your details</string>
    <string name="confirm_popup_email_hint">Email: </string>
    <string name="confirm_popup_name_hint">Name: </string>
    <string name="confirm_popup_name_hint_ph">Complete Name Placeholder</string>
    <string name="confirm_popup_phone_hint">Phone: </string>
    <string name="confirm_popup_phone_hint_ph">Phone Placeholder</string>
    <string name="confirm_popup_gender_hint">Gender: </string>
    <string name="confirm_popup_gender_hint_ph">Gender Placeholder</string>
    <string name="confirm_popup_bloodgroup_hint">Blood Group: </string>
    <string name="confirm_popup_bloodgroup_hint_ph">Blood Group Placeholder</string>

    <!--Dashboard Fragment Layout Strings -->
    <string name="dashboard_fragment_title_header">Blood Donations Required</string>

    <!--Dashboard Row Layout Strings -->
    <string name="dashboard_row_name">Name</string>
    <string name="dashboard_row_bloodGroup">Blood Group</string>
    <string name="dashboard_row_timeStamp">Time Posted</string>
    <string name="dashboard_row_location">Location</string>

    <!--Popup New Request Layout Strings -->
    <string name="popup_request_title">New %1$s Request</string>
    <string name="popup_request_name_hint">Name</string>
    <string name="popup_request_address_hint">Please enter your address</string>

    <!--Popup New Request Layout Strings -->
    <string name="login_fragment_email_address_hint">Email Address</string>
    <string name="login_fragment_password_hint">Password</string>
    <string name="login_fragment_forget_password">Forget Password?</string>
    <string name="login_fragment_registration_button">Register</string>
    <string name="login_fragment_login_button">Login</string>
    <string name="login_fragment_minimum_password_error">Password must be greater than 6 characters</string>
    <string name="login_fragment_auth_failed_error">User does not exist</string>

    <string name="forget_password_button">Recover Password</string>
    <string name="forget_password_editText_hint">Please enter your Email Address</string>

    <!--Popup New Request Layout Strings -->
    <string name="popup_phonecall_sms_phonecall">Call this person</string>
    <string name="popup_phonecall_sms_sms">Send an SMS</string>

    <string name="text_message">Hello, I am willing to donate the requested blood. Please follow up with me at this number: </string>

</resources>
