<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/registration_fragment_registration"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/registrationFragmentCompleteNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/registration_fragment_name_hint"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/registrationFragmentPhoneNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/registration_fragment_phone_hint"
        android:inputType="phone"
        android:maxLength="11"
        android:padding="12dp"/>

    <RadioGroup
        android:id="@+id/registrationFragmentGenderRadioButton"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/registration_fragment_male" />

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_fragment_female" />

    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/registration_fragment_bloodgroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textStyle="bold"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/registrationFragmentBloodGroupSpinner"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:entries="@array/bloodGroups"
            android:prompt="@string/registration_fragment_spinner_prompt"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <CheckBox
        android:padding="8dp"
        android:id="@+id/termsAndConditionsCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_fragment_terms_and_conditions" />

    <Button
        android:id="@+id/registrationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/registration_fragment_register_button" />

</LinearLayout>