<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/dashboardRowNameTextView"
        android:gravity="center"
        android:text="@string/dashboard_row_name"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:padding="4dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dashboardRowBloodGroupTextView"
            android:text="@string/dashboard_row_bloodGroup"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight=".3"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/dashboardRowTimestampTextView"
            android:text="@string/dashboard_row_timeStamp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight=".7"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/dashboardRowLocationTextView"
        android:text="@string/dashboard_row_location"
        android:gravity="center"
        android:maxLines="2"
        android:padding="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>