<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:padding="8dp"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/app_name"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/forgetPasswordFragmentEmailAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="8"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:hint="@string/forget_password_editText_hint"
            android:padding="12dp"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnForgetPassword"
        android:text="@string/forget_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="20dp"
        android:visibility="gone" />

</LinearLayout>